# stairling_assessment

./: .env  Cargo.toml  Makefile  README.md
database/: Cargo.toml  diesel.toml
database/migrations/2025-08-04-090540_create_driver/: down.sql  up.sql
database/migrations/2025-08-04-090552_create_ride/: down.sql  up.sql
database/src/: errors.rs  lib.rs  models.rs  schema.rs
database/src/queries/: get_balance.rs  ingest.rs  mod.rs  post_ingest.rs
financial_service/: Cargo.toml
financial_service/src/: lib.rs
financial_service/test/: test.rs
financial_service/tests/: test.rs
src/: main.rs  params.rs
web/: Cargo.toml
web/src/: lib.rs  main.rs  routes.rs
web/tests/: integration_test.rs
