[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.0", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "chrono",
] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
